<resources>
    <string name="app_name">Hackathon trial</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="log_in">Log in!</string>
    <string name="app_icon">App_Icon</string>
    <string name="normal_user">Normal User</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email_xyz_com">Email@xyz.com</string>
    <string name="phone_number">Phone number</string>
    <string name="registration_number">Registration Number</string>
    <string name="hello">Hello</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_icon">User Icon</string>
    <string name="doc_number">Doc number</string>
    <string name="doc_mail">Doc Mail</string>
    <string name="specialisations">Specialisations</string>
    <string name="time_available">Time available</string>
    <string name="doctor_name">Doctor name</string>
    <string name="menu_selected">Menu Selected</string>
    <string name="menuicon">MenuIcon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specifications">Specifications</string>
    <string name="sign_up">Sign Up!</string>
</resources>