<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_doccorner">

    <fragment
        android:id="@+id/navigation_doccorner"
        android:name="com.example.logcathealth.ui.DocCorner.DocCornerFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_doc_corner" />

    <fragment
        android:id="@+id/navigation_marketplace"
        android:name="com.example.logcathealth.ui.Marketplace.MarketplaceFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_marketplace" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.logcathealth.ui.Profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>