<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="7sp"
    android:layout_marginLeft="7sp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="7sp"
    android:layout_marginRight="7sp"
    android:layout_marginBottom="7sp"
    android:background="@drawable/item_card"
    android:padding="10sp">

    <ImageView

        android:id="@+id/author_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/doctorcorner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/doctor_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/author_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doc_ph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/doc_number"
        app:layout_constraintStart_toEndOf="@+id/author_icon"
        app:layout_constraintTop_toBottomOf="@id/doc_name" />

    <TextView
        android:id="@+id/doc_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/doc_mail"
        app:layout_constraintStart_toEndOf="@+id/author_icon"
        app:layout_constraintTop_toBottomOf="@id/doc_ph" />

    <TextView
        android:id="@+id/spec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/specialisations"
        app:layout_constraintStart_toEndOf="@+id/author_icon"
        app:layout_constraintTop_toBottomOf="@id/doc_mail" />

    <TextView
        android:id="@+id/available"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/time_available"
        app:layout_constraintLeft_toRightOf="@+id/author_icon"
        app:layout_constraintTop_toBottomOf="@id/spec" />
</androidx.constraintlayout.widget.ConstraintLayout>