<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:backgroundTint="#0869b9"
        app:cornerRadius="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:backgroundTint="#0869b9"
        app:cornerRadius="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hackathon_logo_2"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />
</androidx.constraintlayout.widget.ConstraintLayout>